Частичная проверка и испровление

--- a/source/webapp/templates/poll/poll_view.html
+++ b/source/webapp/templates/poll/poll_view.html
@@ -1,6 +1,6 @@
 {% extends 'poll/base.html' %}
 {% block menu %}
-   <li><a class="navbar-brand" href="{% url 'create_poll'%}">Add Poll</a></li>
+   <li><a class="navbar-brand" href="{% url 'poll_add'%}">Add Poll</a></li>
 {% endblock %}
 
 {% block content %}
@@ -17,8 +17,8 @@
        <h2>Отвкет : {{ choice.question }}</h2>
         <h2>дата создания  : {{ poll.created_at }}</h2>
 
-       <a href="{% url 'update_poll' poll.pk %}"><i class="fas fa-file-signature"></i></a>
-       <a href="{% url 'delete_poll' poll.pk %}"><i class="fas fa-trash"></i></a>
+       <a href="{% url 'poll_update' poll.pk %}"><i class="fas fa-file-signature"></i></a>
+       <a href="{% url 'poll_delete' poll.pk %}"><i class="fas fa-trash"></i></a>
        <a href="{% url 'polls' poll.pk %}"><i class="fas fa-book-open"></i></a>
        <hr/>
    {% endfor %}
