--- a/source/webapp/templates/poll/index.html
+++ b/source/webapp/templates/poll/index.html
@@ -2,8 +2,7 @@
 
 {% block menu %}
 <a class="navbar-brand" href="{% url 'poll_add' %}">Add Poll</a>
-         <a class="navbar-brand" href="{% url 'create_choice' %}">Add Choice</a>
-    <a class="navbar-brand" href="{% url 'view_choice' %}">Choices</a>
+         <a class="navbar-brand" href="{% url 'choice_add' %}">Add Choice</a>
 {% endblock %}
 
 {% block content %}
