--- a/source/webapp/templates/poll/update_poll.html
+++ b/source/webapp/templates/poll/update_poll.html
@@ -12,7 +12,7 @@
 
     <h1>Update POll</h1>
 
-    <form method="POST" action="{% url "update" poll.pk %}">
+    <form method="POST" action="{% url "poll_update" poll.pk %}">
 
         {% csrf_token %}
   {% include 'partial/forms.html' with button_text="Update" %}
